[gd_scene load_steps=13 format=3 uid="uid://bmdh06a6dt7sj"]

[ext_resource type="Texture2D" uid="uid://bvb640a5ndnee" path="res://Sprites/GUI/DoorPlate.png" id="1_kpbo0"]
[ext_resource type="Script" path="res://Prefabs/DoorUiControler.gd" id="1_o4hv3"]
[ext_resource type="Texture2D" uid="uid://bwje540a04l4p" path="res://Sprites/GUI/DoorPlaeShadow.png" id="1_tcklj"]
[ext_resource type="Texture2D" uid="uid://bdqxqlfvvpto6" path="res://Sprites/GUI/UnlockButton.png" id="2_q315m"]
[ext_resource type="Texture2D" uid="uid://br3r70c0cynwr" path="res://Sprites/GUI/UnlockButtonPressed.png" id="4_lsx4h"]
[ext_resource type="Script" path="res://Prefabs/UnlockDoorButton.gd" id="5_4hn42"]
[ext_resource type="Texture2D" uid="uid://cna2miih0xkiv" path="res://Sprites/GUI/LockButton.png" id="6_e56ow"]
[ext_resource type="Texture2D" uid="uid://10owbnbqhhhc" path="res://Sprites/GUI/LockButtonPressed.png" id="7_vgept"]
[ext_resource type="Script" path="res://Prefabs/LockDoorButton.gd" id="8_hfajm"]
[ext_resource type="Texture2D" uid="uid://dnb5vnh11n5r5" path="res://Sprites/GUI/MinorCardL1.png" id="9_dj4vs"]
[ext_resource type="Texture2D" uid="uid://rv20dpvjtxs" path="res://Sprites/GUI/MinorCardL2.png" id="10_4thuj"]
[ext_resource type="FontFile" uid="uid://bm3ajcbsve4hj" path="res://Fonts/dogicapixel.ttf" id="12_4pesq"]

[node name="DoorOpenUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o4hv3")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(1920, 1080)

[node name="IneractionPanelShadow" type="TextureRect" parent="BackgroundPanel"]
texture_filter = 1
texture_repeat = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -525.0
offset_right = 960.0
offset_bottom = 555.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(904, 540)
texture = ExtResource("1_tcklj")

[node name="InteractionPanel" type="TextureRect" parent="BackgroundPanel"]
texture_filter = 1
texture_repeat = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(960, 540)
texture = ExtResource("1_kpbo0")

[node name="UnlockButton" type="TextureButton" parent="BackgroundPanel/InteractionPanel"]
texture_filter = 1
texture_repeat = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -315.0
offset_top = -194.0
offset_right = -75.0
offset_bottom = -59.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(240, 135)
texture_normal = ExtResource("2_q315m")
texture_pressed = ExtResource("4_lsx4h")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("5_4hn42")

[node name="LockButton" type="TextureButton" parent="BackgroundPanel/InteractionPanel"]
texture_filter = 1
texture_repeat = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -585.0
offset_top = -194.0
offset_right = -345.0
offset_bottom = -59.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(240, 135)
texture_normal = ExtResource("6_e56ow")
texture_pressed = ExtResource("7_vgept")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("8_hfajm")

[node name="PlayerCard" type="TextureRect" parent="BackgroundPanel/InteractionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -521.0
offset_top = -330.75
offset_right = -89.0
offset_bottom = 330.75
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(432, 330.75)
texture = ExtResource("9_dj4vs")

[node name="DoorCard" type="TextureRect" parent="BackgroundPanel/InteractionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 89.0
offset_top = -330.75
offset_right = 521.0
offset_bottom = 330.75
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 330.75)
texture = ExtResource("10_4thuj")

[node name="Label" type="Label" parent="BackgroundPanel/InteractionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -515.0
offset_top = -453.0
offset_right = -95.0
offset_bottom = -345.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(210, 108)
theme_override_fonts/font = ExtResource("12_4pesq")
theme_override_font_sizes/font_size = 100
text = "YOUR"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label2" type="Label" parent="BackgroundPanel/InteractionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 81.0
offset_top = -455.0
offset_right = 516.0
offset_bottom = -347.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(217.5, 54)
theme_override_fonts/font = ExtResource("12_4pesq")
theme_override_font_sizes/font_size = 100
text = "DOOR"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Comparison" type="Label" parent="BackgroundPanel/InteractionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.5
offset_top = -156.5
offset_right = 305.5
offset_bottom = 156.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("12_4pesq")
theme_override_font_sizes/font_size = 100
text = ">"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChanceToWin" type="Label" parent="BackgroundPanel/InteractionPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 90.0
offset_top = -129.0
offset_right = 855.0
offset_bottom = -76.0
grow_vertical = 0
pivot_offset = Vector2(0, 53)
theme_override_colors/font_color = Color(0.85098, 0.85098, 0.85098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.27451)
theme_override_constants/shadow_offset_x = 8
theme_override_constants/shadow_offset_y = 7
theme_override_fonts/font = ExtResource("12_4pesq")
theme_override_font_sizes/font_size = 57
text = "Chance to win: ~%"
vertical_alignment = 2

[connection signal="button_up" from="BackgroundPanel/InteractionPanel/UnlockButton" to="BackgroundPanel/InteractionPanel/UnlockButton" method="_on_button_up"]
[connection signal="button_up" from="BackgroundPanel/InteractionPanel/LockButton" to="BackgroundPanel/InteractionPanel/LockButton" method="_on_button_up"]
